# Cyber-Bench-Hardware

./: .gitignore  README.md  pyproject.toml
bundles/google-web-10/: README.md  manifest.json
bundles/smoke-web/: manifest.json
bundles/web-5/: manifest.json
cyberbench/: __init__.py  benchmark_static.py  cli.py  config.py  manifest.py  opencode_runner.py  openrouter.py  runner.py
cyberbench/runtime/: __init__.py  docker.py
docs/: architecture.md  openrouter.md  web5-harbor-time-budget.md
memory-vul-bench/: README.md  Report.md  requirements.txt
memory-vul-bench/pipeline/: __init__.py  agent_runner.py  db.py  failure_analysis.py  fetch_tasks.py  report.py  scorer.py
memory-vul-bench/results/: runs.db  runs_models.db  runs_models_a.db  runs_models_b.db  runs_run_20260516_061754.db  runs_run_20260516_061755.db  runs_run_20260516_061756.db  runs_run_20260516_061758.db  runs_with_context.db
memory-vul-bench/scripts/: generate_reports.py  run_pipeline.py  setup.sh  verify_gt.py
scripts/: download_sources.py
sources/: public_web_ctf_sources.json
tasks/co2_l1/: instruction.md
tasks/co2_l3/: task.toml
tasks/lost_transliteration_l0/: task.toml
tasks/lost_transliteration_l1/: task.toml
tasks/lost_transliteration_l2/: instruction.md  task.toml
tasks/lost_transliteration_l3/: task.toml
tasks/lost_transliteration_l4/: task.toml
tests/: test_benchmark_static.py  test_harbor_tasks.py  test_manifest.py  test_opencode_runner.py  test_openrouter.py  test_runner_scoring.py
transcript-viewer/: harbor_transcript.py  index.html  server.py
(+543 files in other folders)
